fix language selector placement on mobile

--- a/app/component/navigation/navigation.scss
+++ b/app/component/navigation/navigation.scss
@@ -106,7 +106,7 @@ $content-background-color: $background-color;
 .lang-select {
   color: white;
   border-bottom: 1px solid #262626;
-  padding: 2px 30px;
+  padding: 2px 5px;
   .lang {
     display: inline-block;
     text-transform: uppercase;
